--- a/style.css
+++ b/style.css
@@ -46,23 +46,68 @@ header {
   height: 25px;
   background-color: #008c6b;
 }
-
+.hp {
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}
+.gameOver {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  text-align: center;
+  margin-top: 20px;
+  max-width: 400px;
+  width: 100%;
+  font-weight: bold;
+  border: 1px solid rgba(128, 128, 128, 0.493);
+  border-radius: 20px;
+}
 .buttonsBlock {
+  padding: 0 10px;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 button {
   margin-top: 20px;
   width: 200px;
   color: white;
-  padding: 20px 40px;
   background-color: #861152;
+  padding: 20px 40px;
   border-radius: 5px;
   transition-duration: 0.3s;
   cursor: pointer;
 }
+.active {
+  background-color: #861152;
+}
+.noActive {
+  background-color: gray;
+}
 button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   transition-duration: 0.3s;
+}
+
+.logs {
+  padding: 10px;
+  border: 1px solid #000;
+  margin-top: 20px;
+  max-width: 400px;
+  max-height: 400px;
+  width: 100%;
+  height: 150px;
+  overflow-y: auto;
+  font-weight: bold;
+  border: 1px solid rgba(128, 128, 128, 0.493);
+  border-radius: 20px;
+}
+.logsTitle {
+  text-align: center;
 }
